tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/key/after-array.stderr
TOML parse error at line 1, column 14
  |
1 | [[agencies]] owner = "S Cjelli"
  |              ^
invalid table header
expected newline, `#`
